Costo Uniforme y Gradiente Interciclo